@@ -2,6 +2,7 @@ Revision history for Perl extension JavaScript::Minifier::XS.
 
 {{$NEXT}}
     - rewrote test suite into a single ".t" test
+    - optimized memory allocations, by allocating Nodes in bulk
 
 0.13      2020-12-30 21:46:29-08:00 America/Vancouver
     - POD cleanups; spelling, SYNOPSIS
